Closed
Bug 413241
Opened 15 years ago
Closed 15 years ago
Bogus assertion in Statements from jsparse.c
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: igor, Assigned: igor)
References
Details
Attachments
(1 file)
769 bytes,
patch
|
mrbkap
:
review+
brendan
:
review+
brendan
:
approval1.9+
|
Details | Diff | Splinter Review |
As reported in bug 410649 comment 20, the patch for that bug added a bogus assertion to Statements. This prevents using the js shell interactively as it almost instantly will hit the assert.
Flags: blocking1.9?
Assignee | ||
Comment 1•15 years ago
|
||
This bogus assertion somehow slipped from my initial patch for the bug 408271 into the patch for the bug 410649 after I removed it in the final patch.
Assignee | ||
Comment 2•15 years ago
|
||
Here is a trivial fix.
Attachment #298146 -
Flags: review?(mrbkap)
Comment 3•15 years ago
|
||
Comment on attachment 298146 [details] [diff] [review] v1 Drive-by in case mrbkap is busy. /be
Attachment #298146 -
Flags: review+
Attachment #298146 -
Flags: approval1.9+
Updated•15 years ago
|
Attachment #298146 -
Flags: review?(mrbkap) → review+
Assignee | ||
Comment 4•15 years ago
|
||
I checked in the patch from comment 2 to the trunk: http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&branch=HEAD&cvsroot=%252Fcvsroot&date=explicit&mindate=1200862500&maxdate=1200862562&who=igor%25mir2.org
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Flags: in-testsuite-
Flags: in-litmus-
Flags: blocking1.9?
You need to log in
before you can comment on or make changes to this bug.
Description
•