Bug 413241: fixing bogus assertion in Statements() from jsparse.c. r=brendan,mrbkap a=brendan